# WaveBEM

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  WaveBEM.sh  annotated.html  annotated_dup.js  ass__leg__function_8cc.html  ass__leg__function_8cc_source.html  ass__leg__function_8h.html  ass__leg__function_8h_source.html  bem__fma_8cc.html  bem__fma_8cc.js  bem__fma_8cc_source.html  bem__fma_8h.html  bem__fma_8h_source.html  bem__problem_8cc.html  bem__problem_8cc_source.html  bem__problem_8h.html  bem__problem_8h_source.html  bem__utilities_8cc.html  bem__utilities_8cc.js  bem__utilities_8cc_source.html  bem__utilities_8h.html  bem__utilities_8h.js  bem__utilities_8h_source.html  boat__model_8cc.html  boat__model_8cc_source.html  boat__model_8h.html  boat__model_8h_source.html  boat__surface_8cc.html  boat__surface_8cc_source.html  boat__surface_8h.html  boat__surface_8h_source.html  changes_8h.html  changes_8h_source.html  changes_after__x__x__x.html  classVector.js  class_ass_leg_function-members.html  class_ass_leg_function.html  (+338 more)
DTMB-5415/: DTMB_exp_comparison_wave_elevations.m  goteborgExpFr028_2340.csv  goteborgExpFr028_5415.csv  goteborgExpFr028_5512.csv  waveCutsOlivieri0082.csv  waveCutsOlivieri0172.csv  waveCutsOlivieri0259.csv  waveCutsOlivieri0347.csv  waveElevationY082.csv  waveElevationY172.csv  waveElevationY259.csv
KRISO/: kcs_waterline_exp.csv  kvlccBoth_waterline_exp.csv
NPL/: npl.tgz  npl_Fr025_damped_less_new_force.txt  npl_Fr02_force.txt  npl_Fr030_damped_less_force.txt  npl_Fr035_new_force.txt  npl_Fr04_damped_force.txt  npl_forces.m  npl_new_mesh_test_force.txt
NPL/NPL_HULL_MATERIAL/: npl_hull_full_size.iges
WIGLEY/: test_wigley_Fr250_force.txt  test_wigley_Fr267_force.txt  test_wigley_Fr267_water_line.txt  test_wigley_Fr354_water_line.txt  test_wigley_Fr408_force.txt  tokyoFr0267.csv  tokyoFr0289.csv  wigley.m  wigleyDrag.csv  wigleyDragExp2.csv  wigleyDragExp3.csv
docker/: Dockerfile
doxygen/: CMakeLists.txt  Doxyfile.in
doxygen/headers/: changes.h.empty  main.h
experimental-results/dtmb-5415/: DTMB_Fr028_fine_test_water_line.txt  waveElevationY347.csv
experimental-results/kriso/: kvlcc2_waterline_exp.csv  kvlcc_waterline_exp.csv
experimental-results/npl/: npl_Fr020_damped_less_force.txt  npl_Fr025_damped_less_force.txt  npl_Fr035_damped_less_force.txt  npl_Fr03_new_force.txt  npl_Fr04_damped_less_force.txt  npl_exp_drag.csv
experimental-results/wigley/: test_wigley_Fr250_water_line.txt  test_wigley_Fr289_force.txt  test_wigley_Fr289_water_line.txt  test_wigley_Fr316_force.txt  test_wigley_Fr316_water_line.txt  test_wigley_Fr354_force.txt  test_wigley_Fr408_water_line.txt  tokyoFr025.csv  tokyoFr0316.csv  tokyoFr0354.csv  tokyoFr0408.csv  wigleyDragExp1.csv  wigleyDragExp4.csv
iges-files/: goteborg.iges  kvlcc2m.iges  singolo.iges  vela_enave.iges
include/: DoNotChangeMe.default  ass_leg_function.h  bem_fma.h  bem_problem.h  bem_utilities.h  boat_model.h  boat_surface.h  computational_domain.h  constrained_matrix.h  dae_time_integrator.h  driver.h  free_surface.h  geometry_flags.h  laplace_kernel.h  local_expansion.h  local_expansion_coeff.h  multipole_expansion.h  my_utilities.h  newton_argument.h  newton_solver.h  numerical_towing_tank.h  occ_arclength_projection.h  occ_axis_projection.h  occ_line_smoothing.h  occ_normal_projection.h  occ_utilities.h  octree_block.h  ode_argument.h  restart_nonlinear_problem_alg.h  restart_nonlinear_problem_diff.h  surface_smoothing.h
prm-files/: default-2.prm  paramFileForWaves.prm
scripts/: build_documentation.sh  dr.sh  indent
scripts/tokyo-tests/: base.prm
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_22.js  all_23.html  all_23.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  (+217 more)
source/: ass_leg_function.cc  bem_fma.cc  bem_problem.cc  bem_utilities.cc  boat_model.cc  boat_surface.cc  computational_domain.cc  dae_time_integrator.cc  driver.cc  free_surface.cc  local_expansion.cc  main.cc  multipole_expansion.cc  my_manifold_lib.cc  my_utilities.cc  newton_argument.cc  newton_solver.cc  numerical_towing_tank.cc  occ_arclength_projection.cc  occ_axis_projection.cc  occ_line_smoothing.cc  occ_normal_projection.cc  occ_utilities.cc  octree_block.cc  ode_argument.cc  restart_nonlinear_problem_alg.cc  restart_nonlinear_problem_diff.cc  surface_smoothing.cc
tests/: CMakeLists.txt  template.cc  tests.h
tokyoTests/: README.txt  base.pbs  script.sh
utilities/: NWTFake2DTest.inp  SaveUCD.jou  airy_mesh_2d.inp  airy_mesh_2d_narrow.inp  box_2d.inp  box_3d.inp  carena_macolino.stl  circle_2_bc.inp  cosine3d.inp  cubitDomain.cub  curvedWall.inp  fc_ship.iges  fc_ship_1_0.vtu  flying_carpet.inp  goteborgExperiments.iges  goteborgLow.iges  goteborgSinkTrimFr041.iges  goteborgTransom.iges  kcs.iges  series_60.iges  testHull.iges  vertBoat4.inp  vertBoat5.inp  vertBoat6.inp  vertBoat7.inp  vertCyl.cub  wigley1.inp  wigley2.inp  wigley5ForSecondOrder.inp  wigleyAllMap.inp  wigleyAllMapCoarse.inp  wigleyBase.inp
